--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
     "prop-types": "^15.8.1",
